Library Override: Can't change Armature Layer enabled-ness #80643

Closed
opened 2020-09-09 18:12:35 +02:00 by Demeter Dzadik · 9 comments
Member

System Information
Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: arcpatch-D8849, commit date: 2020-09-09 16:05, hash: 812be4c253

Short description of error
When making a library override of an armature, the armature layers cannot be changed.

Exact steps for others to reproduce the error

  • Link armature from another file
  • Make Library Override
  • Among other things, but most importantly, armature layers cannot be changed
    image.png

CC @mont29 you asked to report in chat :)

PS. Bone Groups, Motion Path, armature viewport display options, would also be nice to access.

**System Information** Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: arcpatch-[D8849](https://archive.blender.org/developer/D8849), commit date: 2020-09-09 16:05, hash: `812be4c253` **Short description of error** When making a library override of an armature, the armature layers cannot be changed. **Exact steps for others to reproduce the error** - Link armature from another file - Make Library Override - Among other things, but most importantly, armature layers cannot be changed ![image.png](https://archive.blender.org/developer/F8858457/image.png) CC @mont29 you asked to report in chat :) PS. Bone Groups, Motion Path, armature viewport display options, would also be nice to access.
Author
Member

Added subscribers: @mont29, @Mets

Added subscribers: @mont29, @Mets
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

For some reason, I am unable to reproduce.
Mind sharing source and mainfile here so we are all on the same page?

For some reason, I am unable to reproduce. Mind sharing source and mainfile here so we are all on the same page?

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Bastien Montagne self-assigned this 2020-09-14 11:30:49 +02:00

@lichtwerk with basic test armature data-block itself won't be overridden, it remains only linked (you need complex rig with drivers and such to enforce overriding the armature data too). Since this property has the PROP_LIB_EXCEPTION option set, it is editable as linked data, but not as overridden one currently!

@lichtwerk with basic test armature data-block itself won't be overridden, it remains only linked (you need complex rig with drivers and such to enforce overriding the armature data too). Since this property has the `PROP_LIB_EXCEPTION` option set, it is editable as linked data, but not as overridden one currently!

This issue was referenced by 3ce06a8011

This issue was referenced by 3ce06a8011eb276dd3447ff1101bb3eecfe9e4d7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

In #80643#1015075, @mont29 wrote:
@lichtwerk with basic test armature data-block itself won't be overridden, it remains only linked (you need complex rig with drivers and such to enforce overriding the armature data too). Since this property has the PROP_LIB_EXCEPTION option set, it is editable as linked data, but not as overridden one currently!

Wasnt aware, thx noting! (and thx for the fix obviously!)

> In #80643#1015075, @mont29 wrote: > @lichtwerk with basic test armature data-block itself won't be overridden, it remains only linked (you need complex rig with drivers and such to enforce overriding the armature data too). Since this property has the `PROP_LIB_EXCEPTION` option set, it is editable as linked data, but not as overridden one currently! Wasnt aware, thx noting! (and thx for the fix obviously!)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80643
No description provided.