Fix T80643: Library Override: Can't change Armature Layer enabled-ness.

Armature properties still had to be made overridable.